# cpp-actions

./: CMakeLists.txt
.github/workflows/: test.yaml
src/: main.cpp
